<resources>
    <string name="app_name">CookBook</string>
    <string name="main_logo">CookBook</string>
    <string name="main_logo_text">Slogan comming soon..</string>
    <string name="recipe_picture">recipe_picture</string>
    <string name="recipe_click_title">TextView</string>
    <string name="recipeName">TextView</string>
    <string name="full_recipe_image">full_recipe</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients">TextView</string>
    <string name="steps_title">Steps</string>
    <string name="steps">TextView</string>
    <string name="category_recipe_title">TextView</string>
</resources>
