<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="22dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="2"
                android:text="@string/recipeName"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="3dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="84dp">

                <ImageView
                    android:id="@+id/imageRecipe"
                    android:layout_width="250dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:outlineAmbientShadowColor="@color/colorPrimary"
                    android:outlineSpotShadowColor="@color/colorPrimary"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:contentDescription="@string/full_recipe_image" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/ingredientsTitletextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/ingredients_title"
                android:textAlignment="center"
                android:textColor="@color/colorTitle"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/ingredientsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/ingredients"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stepsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:fontFamily="monospace"
                android:text="@string/steps_title"
                android:textAlignment="center"
                android:textColor="@color/colorTitle"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/stepsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/steps"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>